# haff

src/: CMakeLists.txt  archiver.cpp  archiver.hpp  bitstring.cpp  bitstring.hpp  huffman.cpp  huffman.hpp  main_decoding.cpp  main_encoding.cpp  stdc++.hpp
